// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wopi Should allow edit based on available action 1`] = `
<div>
  {"isReadAwailable":{"Name":"WopiOpenEdit"},"isWriteAwailable":{"Name":"WopiOpenEdit"}}
</div>
`;

exports[`Wopi Should allow view based on available action 1`] = `
<div>
  {"isReadAwailable":{"Name":"WopiOpenView"}}
</div>
`;

exports[`Wopi Should match the snapshot 1`] = `
<div>
  {}
</div>
`;
